# dev

./: .gitignore  README.md  init.sh  pyproject.toml
ansible/: compose.yml
ansible/roles/configure/files/iterm2/: com.googlecode.iterm2.plist
ansible/roles/configure/files/starship/: starship.toml
ansible/roles/configure/files/vscode/: extensions.txt  keybindings.json  settings.json
ansible/roles/configure/files/zsh/: .aliases  .zshenv  .zshrc
ansible/roles/configure/tasks/: main.yml
ansible/roles/configure/templates/git/: .gitconfig.j2
ansible/roles/configure/vars/: main.yml
config/: starship.toml
iterm2/: Gibson.itermcolors  Gibson.json  Profiles.json  com.googlecode.iterm2.plist
vscode/: extensions.txt  settings.json
zsh/: .aliases  .zshrc
